--- a/locales/en/services.json
+++ b/locales/en/services.json
@@ -1,9 +1,10 @@
 {
-  "whatDoWeOffer": "What Services do we offer ?",
+  "subtitle": "we've got all what you need",
   "softwareDevelopment": "Software Development",
+  "digitalMarketing": "Digital Marketing",
   "graphicDesign": "Graphic Design",
   "graphicDesignAndIllustrations": "Graphic Design and Illustrations",
-  "webDevelopmentDescription": "We follow a good practises when creating modern advanced web sites.starting with enginering the overall idea from the database using secure database paradimes , funcionality and algorithms requirements will be implemented using our backend stack like laravel. creating a data api hosted in the server that serves the data to the front user interface that would be built with our frontend stack like Vue Js .and implements the design system you prefer or using pre built templates.",
+  "webDevelopmentDescription": "We follow good practises when creating modern advanced web sites.starting with enginering the overall idea from the database using secure database paradimes , funcionality and algorithms requirements will be implemented using our backend stack like laravel. creating a data api hosted in the server that serves the data to the front user interface that would be built with our frontend stack like Vue Js .and implements the design system you prefer or using pre built templates.",
   "mobileDevelopmentDescription": "Develop your mobile application that can interract with your hosted web api and serve your customers the data through a smooth material design UI . you have the choise to pick native or hybrid mobile applications.",
   "codeDebugging": "Code Maintenance & Debugging",
   "codeDebuggingDescription": "We Offer 1 free month without a charge for code maintance . if you have any kind of bug report back to our team and we will be happy to fix it. we also offer free functionality requirements in this 1 month without a single charge.",
@@ -23,11 +24,11 @@
   "methodology": "Methodology",
   "ourMethodology": "Our Methodology",
   "planning": "Engineering & Planning",
-  "planningDescription" : "We start with putting your thoughts in the table . and engineering your business requirements and modeling your enterprise entities in order to get a global and deep infrastructure for your system",
-  "designing" : "Building a design system",
-  "designingDescription" : "we then illustrate your brand into a powerful design system for the web and mobile . and symbolize your brand to a logo and a business card",
-  "developing" : "Developing & Testing",
-  "developingDescription" : "developing your business entities and models to a digital system (web / mobile), in order to expand your enterprise through the net",
-  "deploying" : "Deploying & maintaining",
-  "deployingDescription" : "once the development phase is done and the code base is well tested , we ship your web application to vps / shared hosting server on the web . for your mobile application we extract a APK executable file and deploy it to the Google  / Apple store . and we stay with you a whole month observing , debugging and maintaning your application"
+  "planningDescription": "We start with putting your thoughts in the table . and engineering your business requirements and modeling your enterprise entities in order to get a global and deep infrastructure for your system",
+  "designing": "Building a design system",
+  "designingDescription": "we then illustrate your brand into a powerful design system for the web and mobile . and symbolize your brand to a logo and a business card",
+  "developing": "Developing & Testing",
+  "developingDescription": "developing your business entities and models to a digital system (web / mobile), in order to expand your enterprise through the net",
+  "deploying": "Deploying & maintaining",
+  "deployingDescription": "once the development phase is done and the code base is well tested , we ship your web application to vps / shared hosting server on the web . for your mobile application we extract a APK executable file and deploy it to the Google  / Apple store . and we stay with you a whole month observing , debugging and maintaning your application"
 }
