fixed slow animation

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,5 +1,6 @@
 {
-  "home" : "Home",
+  "ourServices" : "Our Services",
+  "home": "Home",
   "phone": "Phone",
   "quickLinks": "Quick Links",
   "ourSocialMedia": "Our Social Media",
