added contact page design

--- a/locales/en/services.json
+++ b/locales/en/services.json
@@ -1,5 +1,5 @@
 {
-  "subtitle": "we've got all what you need",
+  "subtitle": "We've got all what you need",
   "softwareDevelopment": "Software Development",
   "digitalMarketing": "Digital Marketing",
   "graphicDesign": "Graphic Design",
@@ -14,7 +14,7 @@
   "debugging": "Debugging",
   "debuggingDescription": "if your code base is suffering from bugs . feel free to contact us soon so we can debug your code.",
   "seo": "SEO Strategy",
-  "seoDescription": "using our good seo practises can optimize your website to rank on the first pages of the search engine. which means more clients seeing your website . this marketing strategy can worth a lot of money nowdays.",
+  "seoDescription": "using our good seo practises can optimize your website to rank on the first pages of the search engine. which means more clients seeing your website . this marketing strategy can worth a lot of money nowadays.",
   "socialMediaAds": "Social Media ADS",
   "socialMediaAdsDescription": "Our marketing team offers advertisements services delivered through digital channels such as search engines, websites, social media, email, and mobile apps. Using these online media channels,you can endorse your company's goods, services, and brands.",
   "logoDesign": "Logo Design",
