--- a/locales/fr/services.json
+++ b/locales/fr/services.json
@@ -1,5 +1,5 @@
 {
-  "subtitle": "nous avons tout ce dont vous avez besoin",
+  "subtitle": "Nous avons tout ce dont vous avez besoin",
   "softwareDevelopment": "Développement de software",
   "graphicDesign": "Conception graphique",
   "digitalMarketing": "Marketing digital",
