--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -11,7 +11,7 @@
   "heroDescription": "Développez votre travail avec une base de code propre et des applications Web et mobiles hautement performantes optimisées pour le SEO. intégration de technologies avancées. et système de conception puissant. avec un prix abordable",
   "discount": "Promotion",
   "discountText": "30% off pour les solutions ecommerce",
-  "about": "À propos de nous",
+  "about": "À Propos de nous",
   "expertisesSection": {
     "expertise": "Spécialisation",
     "expertiseTitle": "Nos domaines d'expertise",
