--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,5 +1,5 @@
 {
-  "ourServices" : "Our Services",
+  "ourServices": "Our Services",
   "home": "Home",
   "phone": "Phone",
   "quickLinks": "Quick Links",
@@ -25,5 +25,14 @@
   "technologiesSection": {
     "technologiesIntegration": "Technologies Integration",
     "technologiesDescription": "Our Team makes to use the latest , advanced , secure and stable technologies for our projects. so the code base can be maintainable and results in a high performance secure applications"
+  },
+  "faqsSection": {
+    "faqs": "Frequently Asked Questions",
+    "howMuchForSoftware": "How much do you charge for a software (web / mobile)",
+    "howMuchForSoftwareAnswer": "it depends on what application type it is. and what kind of features it possesses . once you tell us about your project we will be able to put a charge record for your project. for example ecommerce projects with typical functionalities usually are worth at least 5000 MAD",
+    "howMuchForHosting": "How much does hosting cost?",
+    "howMuchForHostingAnswer": "hosting usually costs at least 30 MAD per month. It can cost a lot more depending on your requirements. Hosting prices usually increase the more website visitors you have.",
+    "doYouOfferPaymentSchedule": "Do you offer a payment schedule?",
+    "doYouOfferPaymentScheduleAnswer": "yes, we split the payment into two. The first 50% is usually taken once you have seen the mockup of your homepage and you’re happy to move forward. The following 50% is taken after the project is complete."
   }
 }
