--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -1,6 +1,6 @@
 {
-  "ourServices" : "Nos Services",
-  "home" : "Accueil",
+  "ourServices": "Nos Services",
+  "home": "Accueil",
   "phone": "Téléphone",
   "quickLinks": "Liens rapides",
   "ourSocialMedia": "Nos réseaux sociaux",
@@ -25,5 +25,14 @@
   "technologiesSection": {
     "technologiesIntegration": "Intégration des technologies",
     "technologiesDescription": "Notre équipe utilise les dernières technologies avancées, sécurisées et stables pour nos projets. de sorte que la base de code peut être maintenable et se traduit par des applications sécurisées hautes performances"
+  },
+  "faqsSection": {
+    "faqs": "Foire aux questions",
+    "howMuchForSoftware": "Combien facturez-vous pour un software (web / mobile)",
+    "howMuchForSoftwareAnswer": "cela dépend de quel type d'application il s'agit. et quel type de fonctionnalités il possède. une fois que vous nous aurez parlé de votre projet, nous pourrons mettre un cahier de charge pour votre projet. par exemple, les projets de commerce électronique avec des fonctionnalités typiques valent généralement au moins 5000 MAD",
+    "howMuchForHosting": "Combien coûte le hosting?",
+    "howMuchForHostingAnswer": "le hosting coûte généralement au moins 30 MAD par mois. Cela peut coûter beaucoup plus cher en fonction de vos besoins. Les prix d'hébergement augmentent généralement avec le nombre de visiteurs de votre site Web.",
+    "doYouOfferPaymentSchedule": "Proposez-vous un échéancier de paiement ?",
+    "doYouOfferPaymentScheduleAnswer": "oui, nous divisons le paiement en deux. Les premiers 50% sont généralement prélevés une fois que vous avez vu la maquette de votre page d'accueil et que vous êtes heureux d'aller de l'avant. Les 50 % suivants sont prélevés une fois le projet terminé."
   }
 }
