--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -34,5 +34,10 @@
     "howMuchForHostingAnswer": "hosting usually costs at least 30 MAD per month. It can cost a lot more depending on your requirements. Hosting prices usually increase the more website visitors you have.",
     "doYouOfferPaymentSchedule": "Do you offer a payment schedule?",
     "doYouOfferPaymentScheduleAnswer": "yes, we split the payment into two. The first 50% is usually taken once you have seen the mockup of your homepage and you’re happy to move forward. The following 50% is taken after the project is complete."
-  }
+  },
+  "notFoundTitle" : "Page Not Found",
+  "notFoundParagraph" : "It looks like you've been lost. check the url in the address bar",
+  "goHome"  : "Go Back Home",
+  "serverErrorTitle" : "Internal Server Error",
+  "serverErrorParagraph" : "It looks like our server has been for this request. try to go back home"
 }
