fixed favicon for google search results

--- a/locales/en/contact.json
+++ b/locales/en/contact.json
@@ -15,6 +15,6 @@
   "emailNotSent" : "Email wasn't sent. try again",
   "reachTheTeam" : "Reach The Team",
   "whatsappTextReplyTime" : "Typically replies within a day",
-  "whatsappMessage" : "Hello . this is mohamed business marketer! 👋🏼 \n\nWhat can i do for you?",
+  "whatsappMessage" : "Hello . this is mohamed business responsible! 👋🏼 \n\nWhat can i do for you?",
   "whatsappSendButton" : "Send"
 }
