--- a/locales/fr/contact.json
+++ b/locales/fr/contact.json
@@ -15,6 +15,6 @@
   "emailNotSent" : "L'e-mail n'a pas été envoyé. réessayer",
   "reachTheTeam" : "Atteindre l'équipe",
   "whatsappTextReplyTime" : "Répond généralement dans la journée",
-  "whatsappMessage" : "Salut . c'est mohamed commerçant d'affaires ! 👋🏼 \n\nQue puis-je faire pour vous ?",
+  "whatsappMessage" : "Salut . c'est mohamed responsable d'affaires ! 👋🏼 \n\nQue puis-je faire pour vous ?",
   "whatsappSendButton" : "Envoyer"
 }
