--- a/locales/en/projects.json
+++ b/locales/en/projects.json
@@ -13,6 +13,7 @@
   "volzakDescription": "volzak is an ecommerce store for selling all kind of shoes",
   "xeryosDescription": "Xeryos is a prepaid card service that allows users to transfer money from their accounts or other merchants such as e-shops and others on a plastic or virtual Xeryos Prepaid Mastercard® and allows them to use this card as any other worldwide payment card",
   "vccClubDescription": "VCC-Club provides Virtual Credit Card which can be used for Google Ads Billing Virtual Card, Google Play Developer Purchase Card, Chrome Developer Virtual Card, Apple Developer Virtual Card, eBay Verification, Paypal Verification Card, Google Play Apps Purchase Card, Facebook Ads Billing Card, Hulu Trial Activation, Netflix Trial Activation, Amazon Prime Trial Activation",
+  "katsuDescription" : "Katsu is a sushi commerciel website for popular asian meals",
   "visitSite": "Visit Site",
   "seeMore": "See More"
 }
