--- a/locales/fr/packs.json
+++ b/locales/fr/packs.json
@@ -1,11 +1,12 @@
 {
   "subtitle": "Consultez nos tarifs pour les packs les plus populaires parmi nos clients",
   "contactUs" : "nous contacter",
-  "contactUsForMore" : "Pour le développement mobile et le marketing sur les réseaux sociaux, n'hésitez pas à",
+  "contactUsForMore" : "pour le développement mobile et le marketing sur les réseaux sociaux, n'hésitez pas à",
   "websites": "Sites Internet",
   "graphicDesign": "Conception graphique",
   "popular": "Populaire",
   "staticWebsite": "Site vitrine",
   "ecommerceWebsite": "Site E-Commerce",
-  "webApplication": "Application Web"
+  "webApplication": "Application Web",
+  "pricesAreNegotiable" : "Les prix sont négociables. et"
 }
