--- a/locales/fr/projects.json
+++ b/locales/fr/projects.json
@@ -13,6 +13,7 @@
   "volzakDescription": "volzak est un magasin de commerce électronique pour vendre toutes sortes de chaussures",
   "xeryosDescription": "Xeryos est un service de carte prépayée qui permet aux utilisateurs de transférer de l'argent depuis leurs comptes ou d'autres commerçants tels que des boutiques en ligne et autres sur une Xeryos Prepaid Mastercard® plastifiée ou virtuelle et leur permet d'utiliser cette carte comme n'importe quelle autre carte de paiement mondiale",
   "vccClubDescription": "VCC-Club fournit une carte de crédit virtuelle qui peut être utilisée pour la carte virtuelle de facturation Google Ads, la carte d'achat de développeur Google Play, la carte virtuelle de développeur Chrome, la carte virtuelle de développeur Apple, la vérification eBay, la carte de vérification Paypal, la carte d'achat d'applications Google Play, la facturation des publicités Facebook Carte, activation d'essai Hulu, activation d'essai Netflix, activation d'essai Amazon Prime",
+  "katsuDescription" : "Katsu est un site Web commercial de sushis pour les plats asiatiques populaires",
   "visitSite": "Visitez le site",
   "seeMore": "Voir plus"
 }
