added packs advantages and disadvantages

--- a/locales/en/packs.json
+++ b/locales/en/packs.json
@@ -1,12 +1,35 @@
 {
-  "subtitle": "Check out our pricing for the most popular packs amongs our clients",
+  "subtitle": "Check out our most popular packs",
   "contactUs": "contact us",
   "contactUsForMore": "for mobile development and social media marketing please feel free to",
+  "request": "Request",
   "websites": "Websites",
   "graphicDesign": "Graphic Design",
   "popular": "Popular",
-  "staticWebsite": "Showcase / Static Website",
+  "staticWebsite": "Showcase Website",
   "ecommerceWebsite": "Ecommerce Solution",
   "webApplication": "Web Application",
-  "pricesAreNegotiable" : "Prices are negotiable. and"
+  "pricesAreNegotiable": "Prices are negotiable. and",
+  "freeWebHosting": "1 Year Free web hosting",
+  "contactForm": "Contact Form",
+  "language": "Language",
+  "responsiveDesign": "Responsive Design",
+  "support": "{{count}} Month of Support",
+  "adminPanel": "Admin Panel",
+  "dynamicData": "Dynamic Data",
+  "plugins": "Integrated Plugins & Functionalities",
+  "usersAndRoles": "Users & Roles system",
+  "database": "Database & Security",
+  "imagesManagement": "Images Management",
+  "freeInitialSeo": "1 month free SEO",
+  "sellingCapabilities": "Selling capabilities",
+  "payment": "Payment Integration (Visa , Mastercard , Paypal..)",
+  "salesStatistics": "Sales Statistics",
+  "limitlessPages": "Limitless Pages",
+  "full": "Full",
+  "logoVariants": "{{count}} Logo Variants",
+  "limitlessColors": "Limitless Colors Options",
+  "fileFormats": "Multiple file formats (JPG, PNG, AI, PSD, SVG)",
+  "marketingSheet": "1 Free marketing graphic sheet",
+  "businessCard": "Free Business Card Design"
 }
