--- a/locales/fr/packs.json
+++ b/locales/fr/packs.json
@@ -1,12 +1,35 @@
 {
-  "subtitle": "Consultez nos tarifs pour les packs les plus populaires parmi nos clients",
-  "contactUs" : "nous contacter",
-  "contactUsForMore" : "pour le développement mobile et le marketing sur les réseaux sociaux, n'hésitez pas à",
+  "subtitle": "Découvrez nos packs les plus populaires",
+  "contactUs": "nous contacter",
+  "contactUsForMore": "pour le développement mobile et le marketing sur les réseaux sociaux, n'hésitez pas à",
+  "request": "Demander",
   "websites": "Sites Internet",
   "graphicDesign": "Conception graphique",
   "popular": "Populaire",
   "staticWebsite": "Site vitrine",
   "ecommerceWebsite": "Site E-Commerce",
   "webApplication": "Application Web",
-  "pricesAreNegotiable" : "Les prix sont négociables. et"
+  "pricesAreNegotiable": "Les prix sont négociables. et",
+  "freeWebHosting": "1 an d'hébergement Web gratuit",
+  "contactForm": "Formulaire de contact",
+  "language": "Langue",
+  "responsiveDesign": "Responsive Design",
+  "support": "{{count}} Mois du Support",
+  "adminPanel": "Panneau d'administration",
+  "dynamicData": "Données dynamiques",
+  "plugins": "Plugins et fonctionnalités intégrés",
+  "usersAndRoles": "Système d'utilisateurs et de rôles",
+  "database": "Base de données et sécurité",
+  "imagesManagement": "Gestion des images",
+  "freeInitialSeo": "1 mois de référencement gratuit",
+  "sellingCapabilities": "Capacités de vente",
+  "payment": "Intégration des paiements (Visa, Mastercard, Paypal..)",
+  "salesStatistics": "Statistiques des ventes",
+  "limitlessPages": "Pages illimitées",
+  "full": "Complet",
+  "logoVariants": "{{count}} Variantes de logo",
+  "limitlessColors": "Options de couleurs illimitées",
+  "fileFormats": "Plusieurs formats de fichiers (JPG, PNG, AI, PSD, SVG)",
+  "marketingSheet": "1 Fiche graphique gratuite",
+  "businessCard": "Conception de carte de visite gratuite"
 }
