--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -6,9 +6,9 @@
   "ourSocialMedia": "Nos réseaux sociaux",
   "language": "Langue",
   "followUsOnSocialMedia": "Suivez-nous sur les réseaux sociaux",
-  "heroTitle": "Services informatiques pour le",
+  "heroTitle": "Services informatiques",
   "webAndMobile": "web & mobile",
-  "heroDescription": "Développez votre travail avec une base de code propre et des applications Web et mobiles hautement performantes optimisées pour le SEO. intégration de technologies avancées. et système de conception puissant. avec un prix abordable",
+  "heroDescription": "Développez votre travail avec une base de code propre et des applications Web et mobiles hautement performantes optimisées pour le SEO. intégration de technologies avancées. et système de conception puissant. avec un prix abordable chez Source Up",
   "discount": "Promotion",
   "discountText": "20% off pour les solutions ecommerce",
   "about": "À Propos de nous",
@@ -29,7 +29,7 @@
   "faqsSection": {
     "faqs": "Foire aux questions",
     "howMuchForSoftware": "Combien facturez-vous pour un software (web / mobile)",
-    "howMuchForSoftwareAnswer": "cela dépend de quel type d'application il s'agit. et quel type de fonctionnalités il possède. une fois que vous nous aurez parlé de votre projet, nous pourrons mettre un cahier de charge pour votre projet. par exemple, les projets de commerce électronique avec des fonctionnalités typiques valent généralement au moins 5000 MAD",
+    "howMuchForSoftwareAnswer": "cela dépend de quel type d'application il s'agit. et quel type de fonctionnalités il possède. une fois que vous nous aurez parlé de votre projet, nous pourrons mettre un cahier de charge pour votre projet. par exemple, les projets de commerce électronique avec des fonctionnalités typiques valent généralement au moins 7000 MAD",
     "howMuchForHosting": "Combien coûte l'hébergement web?",
     "howMuchForHostingAnswer": "l'hébergement web coûte généralement au moins 30 MAD par mois. Cela peut coûter beaucoup plus cher en fonction de vos besoins. Les prix d'hébergement augmentent généralement avec le nombre de visiteurs de votre site Web.",
     "doYouOfferPaymentSchedule": "Proposez-vous un échéancier de paiement ?",
