modified some web packs

--- a/locales/en/packs.json
+++ b/locales/en/packs.json
@@ -10,7 +10,12 @@
   "ecommerceWebsite": "Ecommerce Solution",
   "webApplication": "Web Application",
   "pricesAreNegotiable": "Prices are negotiable. and",
-  "freeWebHosting": "1 Year Free web hosting",
+  "freeSharedHosting": "1 Year shared hosting",
+  "freeVpsHosting" : "2 months Powerfull VPS Hosting",
+  "freeSSL" : "Free SSL certificate & Security",
+  "googleAnalytics" : "Google Analytics",
+  "siteBackup" : "Site Backup",
+  "googleMaps" : "Integrated Google Maps Card",
   "contactForm": "Contact Form",
   "language": "Language",
   "responsiveDesign": "Responsive Design",
