--- a/locales/fr/packs.json
+++ b/locales/fr/packs.json
@@ -10,10 +10,15 @@
   "ecommerceWebsite": "Site E-Commerce",
   "webApplication": "Application Web",
   "pricesAreNegotiable": "Les prix sont négociables. et",
-  "freeWebHosting": "1 an d'hébergement Web gratuit",
+  "freeSharedHosting": "1 an d'hébergement (shared hosting)",
+  "freeVpsHosting": "2 mois d'hébergement (VPS puissant)",
+  "freeSSL": "Certificat SSL gratuit et secruité",
+  "googleAnalytics" : "Google Analytics",
+  "siteBackup": "Sauvegarde de site",
+  "googleMaps" : "Carte Panier Google Maps intégré",
   "contactForm": "Formulaire de contact",
   "language": "Langue",
-  "responsiveDesign": "Responsive Design",
+  "responsiveDesign": "Design Responsive et Interactif",
   "support": "{{count}} Mois du Support",
   "adminPanel": "Panneau d'administration",
   "dynamicData": "Données dynamiques",
