modified some translated files for packs

--- a/locales/fr/packs.json
+++ b/locales/fr/packs.json
@@ -15,7 +15,7 @@
   "freeSSL": "Certificat SSL gratuit et secruité",
   "googleAnalytics" : "Google Analytics",
   "siteBackup": "Sauvegarde de site",
-  "googleMaps" : "Carte Panier Google Maps intégré",
+  "googleMaps" : "Carte Google Maps intégré",
   "contactForm": "Formulaire de contact",
   "language": "Langue",
   "responsiveDesign": "Design Responsive et Interactif",
