optimized meta data and content for seo

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -6,9 +6,10 @@
   "ourSocialMedia": "Our Social Media",
   "language": "Language",
   "followUsOnSocialMedia": "Follow us on social media",
-  "heroTitle": "IT services ",
+  "heroTitle": "IT services",
   "webAndMobile": "web & mobile",
-  "heroDescription": "Develop your business with a Clean code base and high performant web & mobile applications optimized for SEO . advanced technologies integration . and powerful design system . with an affordable price at Source Up",
+  "inMorocco" : "in morocco",
+  "heroDescription": "Develop your business with a Clean code base and high performant showcase web sites, ecommerce sites and mobile applications optimized for SEO . advanced technologies integration . and powerful design system . with an affordable price at Source Up in morocco",
   "discount": "Discount",
   "discountText": "20% off for ecommerce solutions",
   "about": "About",
@@ -16,7 +17,7 @@
     "expertise": "Expertise",
     "expertiseTitle": "Our Areas of Expertise",
     "webDevelopment": "Web Development",
-    "webDevelopmentDescription": "Creating all sort of websites including static and dynamic websites ,portfolios , ecommerce solutions, CMS . and advanced efficient web applications with a rich user interface",
+    "webDevelopmentDescription": "Creating all sort of websites including static and dynamic websites ,portfolios , ecommerce sites, CMS . and advanced efficient web applications with a rich user interface",
     "mobileDevelopment": "Mobile Development",
     "mobileDevelopmentDescription": "Build High permormant hybrid web view and native mobile application for Android and IOS with a smooth UI/UX design",
     "graphicDesign": "Graphic Design",
