--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -6,19 +6,20 @@
   "ourSocialMedia": "Nos réseaux sociaux",
   "language": "Langue",
   "followUsOnSocialMedia": "Suivez-nous sur les réseaux sociaux",
-  "heroTitle": "Services informatiques",
-  "webAndMobile": "web & mobile",
-  "heroDescription": "Développez votre travail avec une base de code propre et des applications Web et mobiles hautement performantes optimisées pour le SEO. intégration de technologies avancées. et système de conception puissant. avec un prix abordable chez Source Up",
+  "heroTitle": "création site",
+  "webAndMobile": "web et applications mobile",
+  "inMorocco" : "au maroc",
+  "heroDescription": "Développez votre travail avec une base de code propre et des sites web vitrine. sites e-commerce et applications mobiles hautement performantes optimisées pour le référencement. intégration de technologies avancées. et système de conception puissant. à petit prix chez Source Up au maroc",
   "discount": "Promotion",
   "discountText": "20% off pour les solutions ecommerce",
   "about": "À Propos de nous",
   "expertisesSection": {
     "expertise": "Spécialisation",
     "expertiseTitle": "Nos domaines d'expertise",
-    "webDevelopment": "Développement web",
-    "webDevelopmentDescription": "Création de toutes sortes de sites Web, y compris des sites Web statiques et dynamiques, des portefeuilles, des solutions de commerce électronique, des CMS. et des applications Web avancées et efficaces avec une interface utilisateur riche",
-    "mobileDevelopment": "Développement mobile",
-    "mobileDevelopmentDescription": "Créez une vue Web hybride hautement permanente et des applications mobiles natives pour Android et IOS avec une conception UI/UX fluide",
+    "webDevelopment": "Création sites web",
+    "webDevelopmentDescription": "Création de toutes sortes de sites web, y compris des sites web statiques et dynamiques, des portefeuilles, des site web e-commerce, des CMS. et des applications web avancées et efficaces avec une interface utilisateur riche",
+    "mobileDevelopment": "Création applications mobile",
+    "mobileDevelopmentDescription": "Créez une vue web hybride hautement permanente et des applications mobiles natives pour Android et IOS avec une conception UI/UX fluide",
     "graphicDesign": "Infographie",
     "graphicDesignDescription": "Création et optimisation de vecteurs graphiques, y compris la création de logos et la conception de modèles de cartes de visite et le montage vidéo"
   },
