add chronoprint, topomaroc, transyanis to projects and latest projects sections

--- a/locales/en/projects.json
+++ b/locales/en/projects.json
@@ -6,14 +6,20 @@
   "foodDelivery": "Food Delivery",
   "entertainment": "Entertainment",
   "ecommerce": "E-commerce",
-  "finance" : "Finance",
+  "finance": "Finance",
   "tousalikDescription": "tousalik is a commercial cms website for selling bags, backpacks and sports clothing",
   "yankeesDescription": "yankees is an ecommerce food delivery web application . it has ton of features such as a cart system and an online payment system. and an admin panel which manages the menus and the toppings and the business schedule and the delivery zone",
   "connectoDescription": "connecto is a social media web application where users can sign up and follow other users and see their posts . like and comment . it was developed personally for our team for entertainment reasons",
   "volzakDescription": "volzak is an ecommerce store for selling all kind of shoes",
   "xeryosDescription": "Xeryos is a prepaid card service that allows users to transfer money from their accounts or other merchants such as e-shops and others on a plastic or virtual Xeryos Prepaid Mastercard® and allows them to use this card as any other worldwide payment card",
   "vccClubDescription": "VCC-Club provides Virtual Credit Card which can be used for Google Ads Billing Virtual Card, Google Play Developer Purchase Card, Chrome Developer Virtual Card, Apple Developer Virtual Card, eBay Verification, Paypal Verification Card, Google Play Apps Purchase Card, Facebook Ads Billing Card, Hulu Trial Activation, Netflix Trial Activation, Amazon Prime Trial Activation",
-  "katsuDescription" : "Katsu is a sushi commerciel website for popular asian meals",
+  "katsuDescription": "Katsu is a sushi commerciel website for popular asian meals",
+  "topomarocDescription": "Topo Maroc is a shop specializing in the sale, rental, overhaul of topography equipment and latest generation site equipment",
+  "topography": "Topography",
+  "chronoprintDescription": "ChronoPrint is an online printing that offers quick and practical procedure of printing your business cards and flyers and all business requirements",
+  "onlinePrinting": "Online printing",
+  "transyanisDescription": "Transyanis specialized in sea, air and road transport, they transport your goods around the world and will give you tailor-made solutions that will meet your requirements",
+  "exportationAndImportation": "Exportation and importation",
   "visitSite": "Visit Site",
   "seeMore": "See More"
 }
