--- a/locales/fr/projects.json
+++ b/locales/fr/projects.json
@@ -13,7 +13,13 @@
   "volzakDescription": "volzak est un magasin de commerce électronique pour vendre toutes sortes de chaussures",
   "xeryosDescription": "Xeryos est un service de carte prépayée qui permet aux utilisateurs de transférer de l'argent depuis leurs comptes ou d'autres commerçants tels que des boutiques en ligne et autres sur une Xeryos Prepaid Mastercard® plastifiée ou virtuelle et leur permet d'utiliser cette carte comme n'importe quelle autre carte de paiement mondiale",
   "vccClubDescription": "VCC-Club fournit une carte de crédit virtuelle qui peut être utilisée pour la carte virtuelle de facturation Google Ads, la carte d'achat de développeur Google Play, la carte virtuelle de développeur Chrome, la carte virtuelle de développeur Apple, la vérification eBay, la carte de vérification Paypal, la carte d'achat d'applications Google Play, la facturation des publicités Facebook Carte, activation d'essai Hulu, activation d'essai Netflix, activation d'essai Amazon Prime",
-  "katsuDescription" : "Katsu est un site Web commercial de sushis pour les plats asiatiques populaires",
+  "katsuDescription": "Katsu est un site Web commercial de sushis pour les plats asiatiques populaires",
+  "topomarocDescription": "Topo Maroc est une boutique spécialisée dans la vente, location, révision de matériel de topographie et équipements de chantier de dernière génération",
+  "topography": "Topographie",
+  "chronoprintDescription": "ChronoPrint est une impression en ligne qui offre une procédure rapide et pratique d'impression de vos cartes de visite et dépliants et toutes les exigences de l'entreprise",
+  "onlinePrinting": "Impression en ligne",
+  "transyanisDescription": "Transyan est spécialisé dans le transport maritime, aérien et routier, il transporte vos marchandises dans le monde entier et vous apportera des solutions sur mesure qui répondront à vos exigences",
+  "exportationAndImportation": "Exportation et importation",
   "visitSite": "Visitez le site",
   "seeMore": "Voir plus"
 }
